tests/elab/ok/let/check_let.pion
def a: Int
    = let x = 5;
    x;
