tests/elab/errors/duplicate_item.pion
def a = false;
def b = true;
def a = 0;
def b = 0;
